Inroduction tam helli teqdim olundu

--- a/Html/index.html
+++ b/Html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../images/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/LOGO-3.webp" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,9 +15,11 @@
 
 <body>
 
+    <!-- Header -->
+
     <header>
         <div class="logo">
-            <img src="../svgs/logo.svg" alt="Portfolio-logo">
+            <img src="../svgs/header/logo.svg" alt="Portfolio-logo">
         </div>
 
         <i class="fa-solid fa-bars"></i>
@@ -27,23 +29,46 @@
             <a href="#">Procejts</a>
             <a href="#">Blog</a>
             <a href="#">Book a call</a>
-            <img src="../svgs/logo-icon.svg">
+            <img src="../svgs/header/right-arrow.svg">
         </nav>
 
     </header>
 
+<!-- introduction -->
+
+    <section>
+        <div class="introduction">
+
+            <div class="left-side">
+                <h1><span>I design products <br>
+                    </span>that delight and <br>
+                    inspire people.</h1>
+                <p>Hi! I’m Jake, a product designer based in Berlin. I create <br>
+                    user-friendly interfaces for fast-growing startups.</p>
+
+                <div class="button-class">
+
+                    <button>Book a call</button>
+                    <a href="../cv.pdf" download="">Download CV</a>
+                    <a href="#"><img src="../svgs/introduction/right-arrow.svg"></a>
+
+                </div>
+            </div>
+
+            <div class="right-side">
+                <img src="../svgs/introduction/profil.svg" alt="profil">
+                
+
+               </div>
+
+            </div>
 
 
 
 
 
 
-
-
-
-
-
-
+    </section>
 
 </body>
 
