--- a/Html/index.html
+++ b/Html/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <!-- Header -->
+    <!-- Header code Star -->
 
     <header>
         <div class="logo">
@@ -34,7 +34,15 @@
 
     </header>
 
-<!-- introduction -->
+
+<!-- Header code End -->
+
+
+
+
+
+
+    <!-- introduction code Start -->
 
     <section>
         <div class="introduction">
@@ -57,18 +65,60 @@
 
             <div class="right-side">
                 <img src="../svgs/introduction/profil.svg" alt="profil">
-                
 
-               </div>
 
             </div>
 
-
-
-
-
-
+        </div>
     </section>
+
+   <!-- Introduction code End -->
+
+
+
+
+
+
+<!-- Trusted-by-section code Start -->
+
+
+<section class="trusted-by-section">
+    <h5>Trusted by</h5>
+       <div class="partner-section">
+
+         <div class="partner-company">
+            <img src="../svgs/trusted-by-section/Partner1.svg" alt="">
+         </div>
+
+
+         <div class="partner-company">
+            <img src="../svgs/trusted-by-section/Partner2.svg" alt="">
+         </div>
+
+
+         <div class="partner-company">
+            <img src="../svgs/trusted-by-section/Partner3.svg" alt="">
+         </div>
+
+
+         <div class="partner-company">
+            <img src="../svgs/trusted-by-section/Partner4.svg" alt="">
+         </div>
+
+
+       </div>
+</section>
+
+
+<!-- Trusted-by-section code End -->
+
+
+
+
+
+
+
+    
 
 </body>
 
