Services section tamamlandi

--- a/Html/index.html
+++ b/Html/index.html
@@ -35,7 +35,7 @@
     </header>
 
 
-<!-- Header code End -->
+    <!-- Header code End -->
 
 
 
@@ -72,53 +72,132 @@
         </div>
     </section>
 
-   <!-- Introduction code End -->
+    <!-- Introduction code End -->
 
 
 
 
 
 
-<!-- Trusted-by-section code Start -->
+    <!-- Trusted-by-section code Start -->
+
+    <section class="trusted-by-section">
+        <h5>Trusted by</h5>
+
+        <div class="partner-section">
+
+            <div class="partner-company">
+                <img src="../svgs/trusted-by-section/Partner1.svg" alt="">
+            </div>
 
 
-<section class="trusted-by-section">
-    <h5>Trusted by</h5>
-       <div class="partner-section">
-
-         <div class="partner-company">
-            <img src="../svgs/trusted-by-section/Partner1.svg" alt="">
-         </div>
+            <div class="partner-company">
+                <img src="../svgs/trusted-by-section/Partner2.svg" alt="">
+            </div>
 
 
-         <div class="partner-company">
-            <img src="../svgs/trusted-by-section/Partner2.svg" alt="">
-         </div>
+            <div class="partner-company">
+                <img src="../svgs/trusted-by-section/Partner3.svg" alt="">
+            </div>
 
 
-         <div class="partner-company">
-            <img src="../svgs/trusted-by-section/Partner3.svg" alt="">
-         </div>
+            <div class="partner-company">
+                <img src="../svgs/trusted-by-section/Partner4.svg" alt="">
+            </div>
 
 
-         <div class="partner-company">
-            <img src="../svgs/trusted-by-section/Partner4.svg" alt="">
-         </div>
+        </div>
+    </section>
 
-
-       </div>
-</section>
-
-
-<!-- Trusted-by-section code End -->
-
-
+    <!-- Trusted-by-section code End -->
 
 
 
 
 
-    
+
+
+
+
+    <!-- Services section code Start -->
+
+    <section class="services-section">
+        <h6>services</h6>
+        <h1>Design that solves problems, <br> one product at a time.</h1>
+
+        <div class="services-cards">
+
+            <div class="service-card">
+                <img src="../svgs/services section/Service1.svg" alt="">
+                <h2>What I can do for you</h2>
+                <p>Faster, better products that your users love. Here's all the services I provide:</p>
+
+                <ul>
+                    <li>Design Strategy</li>
+                    <li>Web and Mobile App Design</li>
+                    <li>Front-end Development</li>
+                </ul>
+
+            </div>
+
+
+
+            <div class="service-card">
+                <img src="../svgs/services section/Service2.svg" alt="">
+                <h2>Applications I'm fluent in</h2>
+                <p>Every designer needs the right tools to do the perfect job. Thankfully, I'm multilingual.</p>
+
+                <ul>
+                    <li>Sketch</li>
+                    <li>Webflow</li>
+                    <li>Figma</li>
+                </ul>
+
+            </div>
+
+
+
+            <div class="service-card">
+                <img src="../svgs/services section/Service3.svg" alt="">
+                <h2>What you can expect</h2>
+                <p>I design products that are more than pretty. I make them shippable and usable.</p>
+
+                <ul>
+                    <li>Clean and functional</li>
+                    <li>Device and user friendly</li>
+                    <li>Efficient and maintainable</li>
+                </ul>
+
+            </div>
+
+
+
+
+        </div>
+
+    </section>
+
+   <!-- Services-section code End -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 
